[package]
name = "verglas"
description = "🧊 Iced SVG icon font generator"
version = "0.1.2"
edition = "2021"
authors = ["Karl Felix Schewe"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kardwen/verglas"
keywords = ["graphics", "gui", "ui", "svg", "ttf"]
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
forge = ["dep:usvg", "dep:kurbo", "dep:write-fonts"]
index = []

[dependencies]
font-types = "0.8.2"
kurbo = { version = "0.11.1", optional = true }
read-fonts = "0.25.2"
thiserror = "2.0.6"
usvg = { version = "0.44.0", optional = true }
write-fonts = { version = "0.33.0", optional = true }

[dev-dependencies]
rstest = "0.24.0"

[workspace]
members = ["example"]

[workspace.dependencies]
verglas = { path = "." }
